--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scrollbar-gutter: stable">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
