--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en" style="scrollbar-gutter: stable">
   <head>
     <meta charset="UTF-8" />
+    <script src="wasm_exec.js"></script>
     <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
     <title>Snapshot</title>
   </head>
   <body>
